Fix menu spacing and button margins

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -21,8 +21,8 @@
   font-size: 0.8rem;
   text-decoration:none;
   text-shadow:0px 1px 0px #854629;
-  padding: 10px 20px;
-  margin-right: 15px;
+  padding: 0.5rem 1.5rem;
+  margin-right: 1rem;
 }
 
 .primary-button:hover {
@@ -42,8 +42,8 @@
 }
 
 .secondary-button {
-  padding: 10px 20px;
-  margin-right: 15px;
+  padding: 0.5rem 1.5rem;
+  margin-right: 1rem;
   border: 1px solid #942911;
   border-radius: 3px;
 }
