--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -16,7 +16,7 @@
 
       a {
         display: inline-block;
-        padding: 1rem 6rem;
+        padding: 1rem 3%;
         text-align: center;
         text-decoration: none;
         color: white;
